--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -423,3 +423,60 @@ h3 {
     border: 0.2rem solid black;
     background-color: #31183b;
 }
+
+.informationbody {
+    background-image: linear-gradient(0deg, transparent 50%, #000000 50%);
+    background-size: 44px 44px;
+    background-color: #2b2b2b;
+    padding: 2rem 20rem;
+    min-height: 100vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
+.centertext {
+    text-align: center;
+}
+
+.whitebox{
+    background-color: white;
+    padding: 2rem;
+    border: 0.3rem solid black;
+    box-shadow: 0.5rem 0.5rem 0 0 black;
+    width: 40vw;
+}
+
+.whitebox p {
+    font-family: Roboto Mono, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: larger;
+    font-weight: bold;
+}
+
+.footerbody {
+    background-color: black;
+    width: 100%;
+    height: 10vh;
+    padding: 0.6rem;
+}
+
+.footernavbar>ul {
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 1vh;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.footernavbar>ul :link,
+.footernavbar>ul :visited {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.footernavbar>ul :hover {
+    color: #ffef09;
+}
