--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -533,3 +533,29 @@ h3 {
 .blacktext {
     color: black;
 }
+
+.subpagetitle {
+    font-size: 5rem;
+    font-family: Jokerman, Cooper Black, Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.subpagedescription {
+    font-size: 1.4rem;
+    line-height: 2rem;
+    width: 50vw;
+    margin: 0 auto;
+}
+
+.removeitembutton {
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-family: 'Lucida Handwriting', 'Comic Sans MS', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.removeitembutton:hover {
+    background-color: transparent;
+    color: red;
+    cursor: pointer;
+    font-family: 'Lucida Handwriting', 'Comic Sans MS', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
